@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN 2.0//EN" "http://www.springframework.org/dtd/spring-beans-2.0.dtd">
+<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN 3.2//EN" "http://www.springframework.org/dtd/spring-beans-3.2.dtd">
 
 <!--
     - SQL error codes for Virtual DataPort.
